<resources>
    <string name="app_name">CovCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rs_rujukan">RS Rujukan</string>
    <string name="berita_terkini">Berita Terkini</string>
    <string name="beranda">Beranda</string>
    <string name="hotline">Hotline</string>
    <string name="apakah_anda_merasak_tidak_enak_badan">Apakah anda merasak tidak enak badan?</string>
    <string name="penjelasan_card">Jika anda merasa tidak sehat dengan tanda-tanda covid 19. Silahkan kontak kami pada nomor ini.</string>
    <string name="hotline_home_card">Hotline +62 812-1212-3119</string>
    <string name="last_update">Last Update: ???</string>
    <string name="jumlah_kasus">Jumlah Kasus</string>
    <string name="nilai_jumlah_kasus">671778</string>
    <string name="dalam_perawatan">Dalam Perawatan</string>
    <string name="nilai_total_dirawat">104809</string>
    <string name="indonesia_cases">Indonesia Cases</string>
    <string name="per_provinsi">Per Provinsi</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="provinsi">Provinsi</string>
    <string name="total_kasus">Total Kasus</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="this_section_is_under_construction">Maaf mengganggu kenyamanan Anda, tetapi halaman ini sedang dalam pengembangan. Jika anda tetap ingin mengetahui Rumah Sakit Rujukan yang menangani Covid-19.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gejala_covid_19">Gejala Covid-19</string>

    <!-- Symptoms -->
    <string name="symptoms_title_1">Apa itu COVID-19?</string>
    <string name="symptoms_desc_1">COVID-19 adalah penyakit menular yang paling baru ditemukan yang disebabkan oleh virus corona. Virus dan penyakit tersebut belum diketahui sebelum adanya wabah di Wuhan, China, di bulan Desember 2019.</string>
    <string name="symptoms_title_2">Apa gejala yang disebabkan oleh COVID-19?</string>
    <string name="symptoms_desc_2">Gejala umum yang disebabkan oleg COVID-19 adalah demam, lelah, dan batuk kering. Beberapa pasien mungkin merasakan kesakitan, hidung tersumbat, pilek, sakit tenggorokan, atau diare. gejala ini adalah gejala ringan and muncul secara bertahap. Beberapa orang yang terinfeksi tidak terlihat suatu gejala dan terlihat sehat. Banyak orang (Sekitar 80%) dapat sembuh tanpa memerlukan penanganan khusus. 1 dari 6 orang yang terkena COVID-19 mendapatkan gejala yang serius dan mengalami kesulitan bernafas. Orang tua dan mereka yang memiliki penyakit bawaan, seperti tekanan darah tinggi, masalah jantung, atau diabetes, lebih memungkinkan untuk mengalami penyakit serius. Sekitar 2% dari orang yang terinfeksi meninggal. Orang yang mendapatkan gejala deman, batuk, dan kesulitan bernafas diwajibkan untuk mendapatkan penanganan medis.</string>
    <string name="symptoms_title_3">Apakah anda menganggap bahwa diri anda atau orang didekat anda terkena COVID-19?</string>
    <string name="demam">Demam</string>
    <string name="batuk">Batuk</string>
    <string name="kesulitan_bernafas">Kesulitan Bernafas</string>
    <string name="flu">Flu</string>

    <!-- Emergency -->
    <string name="emergency_head">Hindari Penyebaran virus corona</string>
    <string name="emergency_title_1">Bagaimana cara COVID-19 menyebar?</string>
    <string name="emergency_desc_1">Seseorang dapat terinfeksi COVID-19 dari kontak dengan seseorang yang sudah terinfeksi sebelumnya. Penyakit ini dapat menyebar dari orang ke orang melalui cairan dari hidung atau mulut yang dikeluarkan saat orang yang terinfeksi batuk atau mengeluarkan napas. Cairan ini jatuh pada benda dan permukaan di sekitar orang tersebut, sehingga orang lain bisa tertular COVID-19 apabila mereka menyentuh benda atau permukaan ini lalu menyentuh mata, hidung, atau mulutnya. Mereka juga dapat menyebar dengan menghirup cairan yang disebarkan oleh penderita COVID-19 melalui batuk atau menghembuskan napas. Itulah mengapa sangat penting untuk menjaga jarak lebih dari 1 meter (3 kaki) dari orang yang sakit. WHO sedang meneliti tentang cara penyebaran COVID-19 dan akan terus melaporkan hasil yang terbaru.</string>
    <string name="emergency_title_2">Apakah virus yang menyebabkan COVID-19 dapat menyebar melalui udara??</string>
    <string name="emergency_desc_2">Studi terbaru menunjukan bahwa virus penyebab COVID-19 disebarkan melalui kontak dengan droplet yang keluar dari napas seseorang,dibandingkan melalui udara.</string>
    <string name="emergency_title_3">Apakah mungkin seseorang dapat terinfeksi COVID-19 dari kontak dengan seseorang yang tidak memiliki gejala?</string>
    <string name="emergency_desc_3">Cara utama penyebaran penyakit ini adalah melalui cairan pernafasan yang dikeluarkan oleh seseorang saat batuk. Risiko tertular COVID-19 dari seseorang tanpa gejala sangatlah rendah. Namun, banyak orang yang terkena COVID-19 hanya mengalami gejala ringan. Hal ini terutama terjadi pada tahap awal penyakit.</string>
    <string name="emergency_title_4">Hal apa saja yang dapat saya lakukan untuk menjaga diri dan mengurangi penyebaran COVID-19?</string>
    <string name="emergency_desc_4">Selalu update dengan berita penyebaran COVID-19, yang dapat diakses melalui website resmi WHO dan melalui dinas kesehatan nasional atau lokal. Kasus telah dilaporkan di banyak negara di seluruh dunia, dan wabah COVID-19 telah terjadi di beberapa negara. Pihak berwenang China dan lainnya telah berhasil memperlambat atau menghentikan perkembangan wabah, tetapi situasinya tidak dapat diprediksi dan berita terbaru perlu diperiksa secara teratur.</string>
    <string name="emergency_prevent_1">Biasakan cuci tangan menggunakan sabun atau Hand Sanitizer.</string>
    <string name="emergency_prevent_2">Jaga jarak minimal 1 meter (3 kaki) diantara anda dan orang yang sedang batuk.</string>
    <string name="emergency_prevent_3">Hindari menyentuh Mata, Hidung, dan Mulut</string>
    <string name="emergency_prevent_4">Anda dan orang di sekitar Anda harus memastikan bahwa Anda menjaga kesterilan udara. yaitu,dengan cara menutupi mulut dan hidung dengan siku ditekuk atau dengan tisu saat batuk atau bersin. Saputangan bekas tersebut harus segera dibuang.</string>
    <string name="emergency_prevent_5">Tetap dirumah apabila anda merasa tidak enak badan. Jika anda demam, batuk dan mengalami kesulitan bernafas, hubungi petugas kesehatan setempat. Ikuti arahan dari Dinas Kesehatan setempat.</string>
    <string name="scare_emergency">Kurangi penyebaran Virus COVID-19</string>
    <string name="scare_emergency_message">Jika anda mencurigai diri anda atau orang didekat anda terinfeksi COVID-19, cari langkah - langkah yang dapat anda lakukan.</string>
    <string name="cara_mencegah_covid_19">Cara Mencegah Covid-19</string>
    <string name="menuju_covid19_go_id">Menuju Covid19.go.id</string>

    <string name="about">This is personal project and also made for my final assignment. Also it\'s open source. If you want to report a bug or want to contribute.</string>
    <string name="github">Github</string>
    <string name="githubName">J3ndra21</string>
    <string name="hotlines">Covid-19 Hotlines</string>
    <string name="hotline_number">Berikut adalah nomor atau email mengenai Covid-19 dari Pemerintah Pusat</string>
    <string name="whodev">Siapa orang dibalik aplikasi ini?</string>
    <string name="about_dev">Tentang Developer</string>
    <string name="bantuan">Bantuan</string>
    <string name="kontak_layanan">KONTAK LAYANAN KEMENTERIAN/LEMBAGA UNTUK COVID-19</string>

</resources>