<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/beranda" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/berita_terkini" />
        <item
            android:id="@+id/nav_hospital"
            android:title="@string/rs_rujukan" />
        <item
            android:id="@+id/nav_prevention"
            android:title="@string/cara_mencegah_covid_19"/>
        <item
            android:id="@+id/nav_symptoms"
            android:title="@string/gejala_covid_19"/>
    </group>
    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/guideFragment"
            android:title="@string/bantuan" >
        </item>
    </group>

</menu>