<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.junianto.covcare.ui.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.junianto.covcare.ui.news.NewsFragment"
        android:label="@string/berita_terkini"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.junianto.covcare.ui.hospital.HospitalFragment"
        android:label="@string/rs_rujukan"
        tools:layout="@layout/fragment_hospital" />
</navigation>