<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.about.AboutFragment"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp">

                    <ImageView
                        android:id="@+id/imageViewTA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_covcare_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageViewTA"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/about"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnGithub"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/githubIcon"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:src="@drawable/ic_github_mark_64px"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/textViewGithub"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/github"
                            android:textAppearance="@style/TextAppearance.CovCare.Body1"
                            android:textStyle="bold"
                            android:letterSpacing="0.1"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toEndOf="@id/githubIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:id="@+id/textViewGithubName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/githubName"
                            android:textAppearance="@style/TextAppearance.CovCare.Caption"
                            android:letterSpacing="0.1"
                            app:layout_constraintStart_toEndOf="@id/githubIcon"
                            app:layout_constraintTop_toBottomOf="@id/textViewGithub"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>